--- a/meta-resin-common/recipes-connectivity/networkmanager/files/NetworkManager.conf
+++ b/meta-resin-common/recipes-connectivity/networkmanager/files/NetworkManager.conf
@@ -2,6 +2,7 @@
 dns=default
 plugins=keyfile
 autoconnect-retries-default=0
+rc-manager=file
 
 [keyfile]
 unmanaged-devices=type:bridge;type:tun;type:veth
